--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "fs": ""
   },
   "devDependencies": {
-    "electron": "^1.7.6"
+    "electron": ">=7.2.4"
   },
   "dependencies": {
     "async": "^2.5.0",
